--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="./styles/developerPortfolio.css">
 </head>
 <body>
-    <header>
+    <header class="header">
         <nav>
             <h3 class="nav-title">Ma<span class="orange-color">r</span>y</h3>
             <ul>
@@ -19,6 +19,16 @@
                 <li><button class="primary-btn">Hire Me</button></li>
             </ul>
         </nav>
+        <div class="banner">
+            <div class="banner-content">
+                <h3 class="banner-greeting">Hi, I  am</h3>
+                <h1 class="banner-title">Mary Hardy</h1>
+                <p class="banner-text">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <button class="primary-btn">Download CV</button>
+                <button class="primary-btn">Contact</button>
+            </div>
+            <img class="banner-image" src="./images/hardy.png" alt="">
+        </div>
     </header>
     <main>
 
