--- a/index.html
+++ b/index.html
@@ -155,7 +155,27 @@
     </section>
     </main>
     <footer>
+        <div class="footer-container">
+            <div class="footer-column">
+                <h3 class="footer-title">Lets Connect</h3>
+                <div class="footer-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</div>
+                <div class="social-link">
+                    <a href=""><img src="./images/icons/facebook.png" alt=""></a>
+                    <a href=""><img src="./images/icons/twitter.png" alt=""></a>
+                    <a href=""><img src="./images/icons/insta.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer-column">
+                <h3 class="footer-title">Let’s Message me</h3>
+                <form class="contact-form" action="">
+                    <input type="text" placeholder="Your name">
+                    <input type="email" placeholder="Your email">
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                    <button type="submit" class="primary-btn">Submit</button>
+                </form>
 
+            </div>
+        </div>
     </footer>
 </body>
 </html>
